hpa/hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test
spec:
  replicas: 3
  selector:
    matchLabels:
        app: load-test
  template:
    metadata:
      labels:
        app: load-test-microsvc
        microservice: load-test
        tier: backend
        component: app-server
    spec:
      volumes:
        - name: esp-nginx
          configMap:
            name: esp-nginx
      containers:
      - image: gcr.io/endpoints-release/endpoints-runtime:1.3
        name: translate-microsvc-esp
        args: [
          "-p", "8080",
          "-a", "127.0.0.1:8081",
          "-s", "api.lnstechnologies.com",
          "-v", "2019-02-14r8",
          "-n", "/etc/nginx/custom/nginx.conf",
        ]
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.05"
        volumeMounts:
        - mountPath: /etc/nginx/custom
          name: esp-nginx
          readOnly: true
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 4
      - image: danibachar/load-test:latest
        name: load-test-cont
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "0.3"
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 4
---
apiVersion: v1
kind: Service
metadata:
  name: load-test-svc
  labels:
    microservice: load-test
    tier: backend
    component: app-server
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: load-test-microsvc
